--- a/foundation/assets/scss/main.scss
+++ b/foundation/assets/scss/main.scss
@@ -68,7 +68,7 @@
 @import "vue-components/nav-link-logout";
 
 // 7- Page
-//@import "pages/auth";
+@import "pages/auth";
 @import "pages/errors";
 @import "pages/log-viewer";
 
